# vision_control

./: CMakeLists.txt  README.md  all_ids.txt  convert.py  convert_masks.py  dataset.py  extract_best_model.py  infer.py  motion_decision.cpp  motion_decision.py  plot.py  requirements.txt  split.sh  train.py  x_metrics.sh
CompVisionMorbius/hospital_environment/hospital_json/: floor1.json  floor10.json  floor11.json  floor12.json  floor13.json  floor14.json  floor15.json  floor16.json  floor17.json  floor18.json  floor19.json  floor2.json  floor20.json  floor21.json  floor22.json  floor23.json  floor24.json  floor25.json  floor26.json  floor27.json  floor28.json  floor29.json  floor3.json  floor30.json  floor31.json  floor32.json  floor33.json  floor34.json  floor35.json  floor36.json  floor37.json  floor38.json  floor39.json  floor4.json  floor40.json  floor41.json  floor42.json  floor43.json  floor44.json  floor45.json  (+25 more)
CompVisionMorbius/splits/: train.txt  val.txt
README/: README.md
metrics/: metrics.csv  metrics2.csv  metrics3.csv  metrics4.csv  metrics5.csv  metrics6.csv  plot.py
seg_video/: CMakeLists.txt  transpose.cpp  transpose.py
